[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/ARLRDBD.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://TileMap.tres" type="TileSet" id=2]
[ext_resource path="res://Story5Theme.gd" type="Script" id=3]
[ext_resource path="res://ControlTextbox.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/587616__szegvari__dark-night-atmo-background-film.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/506085__xcreenplay__clock-is-ticking.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/501575__discordantscraps__glitch-tickle-3.wav" type="AudioStream" id=7]
[ext_resource path="res://Story-MC.gd" type="Script" id=8]
[ext_resource path="res://assets/placeholder.png" type="Texture" id=9]
[ext_resource path="res://Portal.gd" type="Script" id=10]
[ext_resource path="res://PortalNoise.gd" type="Script" id=11]
[ext_resource path="res://TextButton5.gd" type="Script" id=12]
[ext_resource path="res://assets/eyes2.png" type="Texture" id=13]
[ext_resource path="res://assets/dark_lighting.png" type="Texture" id=14]
[ext_resource path="res://assets/CroissantMan.png" type="Texture" id=15]
[ext_resource path="res://assets/portal.png" type="Texture" id=16]
[ext_resource path="res://assets/light_shadow_background.png" type="Texture" id=17]
[ext_resource path="res://assets/watching.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 819.021, 1069.31 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/Untitled_Artwork.png-d90c847bcdbe0f822183364093d4c923.stex"

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

// 振動の強さ
uniform float shake_power = 1;
// 振動率
uniform float shake_rate : hint_range( 0.0, 1.0 ) = 0.2;
// 振動速度
uniform float shake_speed = 10;
// 振動ブロックサイズ
uniform float shake_block_size = 30.5;
// 色の分離率
uniform float shake_color_rate : hint_range( 0.0, 1.0 ) = 0.5;

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46, -54.3415 ) ) ) );
}

void fragment( )
{
	float enable_shift = float(
		random( trunc( TIME * shake_speed ) )
	<	shake_rate
	);

	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(
			( trunc( SCREEN_UV.y * shake_block_size ) / shake_block_size )
		+	TIME
		) - 0.5
	) * shake_power * enable_shift;

	vec4 pixel_color = textureLod( SCREEN_TEXTURE, fixed_uv, 0.0 );
	pixel_color.r = mix(
		pixel_color.r
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( shake_color_rate, 0.0 ), 0.0 ).r
	,	enable_shift
	);
	pixel_color.b = mix(
		pixel_color.b
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( -shake_color_rate, 0.0 ), 0.0 ).b
	,	enable_shift
	);
	COLOR = pixel_color;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/shake_power = 1.0
shader_param/shake_rate = 0.2
shader_param/shake_speed = 10.0
shader_param/shake_block_size = 30.5
shader_param/shake_color_rate = 0.5

[node name="Story5" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( -262150, 13, 0, -262149, 13, 0, -262148, 13, 0, -262147, 13, 0, -262146, 13, 0, -262145, 13, 0, -327680, 13, 0, -327679, 13, 0, -327678, 13, 0, -327677, 13, 0, -327676, 13, 0, -327675, 13, 0, -327674, 13, 0, -327673, 13, 0, -327672, 13, 0, -327671, 13, 0, -327670, 13, 0, -327669, 13, 0, -327668, 13, 0, -327667, 13, 0, -327666, 13, 0, -327665, 13, 0, -327664, 13, 0, -327663, 13, 0, -327662, 13, 0, -327661, 13, 0, -327660, 13, 0, -327659, 13, 0, -327658, 13, 0, -327657, 13, 0, -327656, 13, 0, -327655, 13, 0, -327654, 13, 0, -327653, 13, 0, -327652, 13, 0, -327651, 13, 0, -196614, 13, 0, -196613, 13, 0, -196612, 13, 0, -196611, 13, 0, -196610, 13, 0, -196609, 13, 0, -262144, 13, 0, -262143, 13, 0, -262142, 13, 0, -262141, 13, 0, -262140, 13, 0, -262139, 13, 0, -262138, 13, 0, -262137, 13, 0, -262136, 13, 0, -262135, 13, 0, -262134, 13, 0, -262133, 13, 0, -262132, 13, 0, -262131, 13, 0, -262130, 13, 0, -262129, 13, 0, -262128, 13, 0, -262127, 13, 0, -262126, 13, 0, -262125, 13, 0, -262124, 13, 0, -262123, 13, 0, -262122, 13, 0, -262121, 13, 0, -262120, 13, 0, -262119, 13, 0, -262118, 13, 0, -262117, 13, 0, -262116, 13, 0, -262115, 13, 0, -131078, 13, 0, -131077, 13, 0, -131076, 13, 0, -131075, 13, 0, -131074, 13, 0, -131073, 13, 0, -196608, 13, 0, -196607, 13, 0, -196606, 13, 0, -196605, 13, 0, -196604, 13, 0, -196603, 13, 0, -196602, 13, 0, -196601, 13, 0, -196600, 13, 0, -196599, 13, 0, -196598, 13, 0, -196597, 13, 0, -196596, 13, 0, -196595, 13, 0, -196594, 13, 0, -196593, 13, 0, -196592, 13, 0, -196591, 13, 0, -196590, 13, 0, -196589, 13, 0, -196588, 13, 0, -196587, 13, 0, -196586, 13, 0, -196585, 13, 0, -196584, 13, 0, -196583, 13, 0, -196582, 13, 0, -196581, 13, 0, -196580, 13, 0, -196579, 13, 0, -65542, 13, 0, -65541, 13, 0, -65540, 13, 0, -65539, 13, 0, -65538, 13, 0, -65537, 13, 0, -131072, 13, 0, -131071, 13, 0, -131070, 13, 0, -131069, 13, 0, -131068, 13, 0, -131067, 13, 0, -131066, 13, 0, -131065, 13, 0, -131064, 13, 0, -131063, 13, 0, -131062, 13, 0, -131061, 13, 0, -131060, 13, 0, -131059, 13, 0, -131058, 13, 0, -131057, 13, 0, -131056, 13, 0, -131055, 13, 0, -131054, 13, 0, -131053, 13, 0, -131052, 13, 0, -131051, 13, 0, -131050, 13, 0, -131049, 13, 0, -131048, 13, 0, -131047, 13, 0, -131046, 13, 0, -131045, 13, 0, -131044, 13, 0, -131043, 13, 0, -6, 13, 0, -5, 13, 0, -4, 13, 0, -3, 13, 0, -2, 13, 0, -1, 13, 0, -65536, 13, 0, -65535, 13, 0, -65534, 13, 0, -65533, 13, 0, -65532, 13, 0, -65531, 13, 0, -65530, 13, 0, -65529, 13, 0, -65528, 13, 0, -65527, 13, 0, -65526, 13, 0, -65525, 13, 0, -65524, 13, 0, -65523, 13, 0, -65522, 13, 0, -65521, 13, 0, -65520, 13, 0, -65519, 13, 0, -65518, 13, 0, -65517, 13, 0, -65516, 13, 0, -65515, 13, 0, -65514, 13, 0, -65513, 13, 0, -65512, 13, 0, -65511, 13, 0, -65510, 13, 0, -65509, 13, 0, -65508, 13, 0, -65507, 13, 0, 65530, 13, 0, 65531, 13, 0, 65532, 13, 0, 65533, 13, 0, 65534, 13, 0, 65535, 13, 0, 0, 13, 0, 1, 13, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 0, 6, 13, 0, 7, 13, 0, 8, 13, 0, 9, 13, 0, 10, 13, 0, 11, 13, 0, 12, 13, 0, 13, 13, 0, 14, 13, 0, 15, 13, 0, 16, 13, 0, 17, 13, 0, 18, 13, 0, 19, 13, 0, 20, 13, 0, 21, 13, 0, 22, 13, 0, 23, 13, 0, 24, 13, 0, 25, 13, 0, 26, 13, 0, 27, 13, 0, 28, 13, 0, 29, 13, 0, 131066, 13, 0, 131067, 13, 0, 131068, 13, 0, 131069, 13, 0, 131070, 13, 0, 131071, 13, 0, 65536, 13, 0, 65537, 13, 0, 65538, 13, 0, 65539, 13, 0, 65540, 13, 0, 65541, 13, 0, 65542, 13, 0, 65543, 13, 0, 65544, 13, 0, 65545, 13, 0, 65546, 13, 0, 65547, 13, 0, 65548, 13, 0, 65549, 13, 0, 65550, 13, 0, 65551, 13, 0, 65552, 13, 0, 65553, 13, 0, 65554, 13, 0, 65555, 13, 0, 65556, 13, 0, 65557, 13, 0, 65558, 13, 0, 65559, 13, 0, 65560, 13, 0, 65561, 13, 0, 65562, 13, 0, 65563, 13, 0, 65564, 13, 0, 65565, 13, 0, 196602, 13, 0, 196603, 13, 0, 196604, 13, 0, 196605, 13, 0, 196606, 13, 0, 196607, 13, 0, 131072, 13, 0, 131073, 13, 0, 131074, 13, 0, 131075, 13, 0, 131076, 13, 0, 131077, 13, 0, 131078, 13, 0, 131079, 13, 0, 131080, 13, 0, 131081, 13, 0, 131082, 13, 0, 131083, 13, 0, 131084, 13, 0, 131085, 13, 0, 131086, 13, 0, 131087, 13, 0, 131088, 13, 0, 131089, 13, 0, 131090, 13, 0, 131091, 13, 0, 131092, 13, 0, 131093, 13, 0, 131094, 13, 0, 131095, 13, 0, 131096, 13, 0, 131097, 13, 0, 131098, 13, 0, 131099, 13, 0, 131100, 13, 0, 131101, 13, 0, 262138, 13, 0, 262139, 13, 0, 262140, 13, 0, 262141, 13, 0, 262142, 13, 0, 262143, 13, 0, 196608, 13, 0, 196609, 13, 0, 196610, 13, 0, 196611, 13, 0, 196612, 13, 0, 196613, 13, 0, 196614, 13, 0, 196615, 13, 0, 196616, 13, 0, 196617, 13, 0, 196618, 13, 0, 196619, 13, 0, 196620, 13, 0, 196621, 13, 0, 196622, 13, 0, 196623, 13, 0, 196624, 13, 0, 196625, 13, 0, 196626, 13, 0, 196627, 13, 0, 196628, 13, 0, 196629, 13, 0, 196630, 13, 0, 196631, 13, 0, 196632, 13, 0, 196633, 13, 0, 196634, 13, 0, 196635, 13, 0, 196636, 13, 0, 196637, 13, 0, 327674, 13, 0, 327675, 13, 0, 327676, 13, 0, 327677, 13, 0, 327678, 13, 0, 327679, 13, 0, 262144, 13, 0, 262145, 13, 0, 262146, 13, 0, 262147, 13, 0, 262148, 13, 0, 262149, 13, 0, 262150, 13, 0, 262151, 13, 0, 262152, 13, 0, 262153, 13, 0, 262154, 13, 0, 262155, 13, 0, 262156, 13, 0, 262157, 13, 0, 262158, 13, 0, 262159, 13, 0, 262160, 13, 0, 262161, 13, 0, 262162, 13, 0, 262163, 13, 0, 262164, 13, 0, 262165, 13, 0, 262166, 13, 0, 262167, 13, 0, 262168, 13, 0, 262169, 13, 0, 262170, 13, 0, 262171, 13, 0, 262172, 13, 0, 262173, 13, 0, 393210, 13, 0, 393211, 13, 0, 393212, 13, 0, 393213, 13, 0, 393214, 13, 0, 393215, 13, 0, 327680, 13, 0, 327681, 13, 0, 327682, 13, 0, 327683, 13, 0, 327684, 13, 0, 327685, 13, 0, 327686, 13, 0, 327687, 13, 0, 327688, 13, 0, 327689, 13, 0, 327690, 13, 0, 327691, 13, 0, 327692, 13, 0, 327693, 13, 0, 327694, 13, 0, 327695, 13, 0, 327696, 13, 0, 327697, 13, 0, 327698, 13, 0, 327699, 13, 0, 327700, 13, 0, 327701, 13, 0, 327702, 13, 0, 327703, 13, 0, 327704, 13, 0, 327705, 13, 0, 327706, 13, 0, 327707, 13, 0, 327708, 13, 0, 327709, 13, 0, 458746, 13, 0, 458747, 13, 0, 458748, 13, 0, 458749, 13, 0, 458750, 13, 0, 458751, 13, 0, 393216, 13, 0, 393217, 13, 0, 393218, 13, 0, 393219, 13, 0, 393220, 13, 0, 393221, 13, 0, 393222, 13, 0, 393223, 13, 0, 393224, 13, 0, 393225, 13, 0, 393226, 13, 0, 393227, 13, 0, 393228, 13, 0, 393229, 13, 0, 393230, 13, 0, 393231, 13, 0, 393232, 13, 0, 393233, 13, 0, 393234, 13, 0, 393235, 13, 0, 393236, 13, 0, 393237, 13, 0, 393238, 13, 0, 393239, 13, 0, 393240, 13, 0, 393241, 13, 0, 393242, 13, 0, 393243, 13, 0, 393244, 13, 0, 393245, 13, 0, 524282, 13, 0, 524283, 13, 0, 524284, 13, 0, 524285, 13, 0, 524286, 13, 0, 524287, 13, 0, 458752, 13, 0, 458753, 13, 0, 458754, 13, 0, 458755, 13, 0, 458756, 13, 0, 458757, 13, 0, 458758, 13, 0, 458759, 13, 0, 458760, 13, 0, 458761, 13, 0, 458762, 13, 0, 458763, 13, 0, 458764, 13, 0, 458765, 13, 0, 458766, 13, 0, 458767, 13, 0, 458768, 13, 0, 458769, 13, 0, 458770, 13, 0, 458771, 13, 0, 458772, 13, 0, 458773, 13, 0, 458774, 13, 0, 458775, 13, 0, 458776, 13, 0, 458777, 13, 0, 458778, 13, 0, 458779, 13, 0, 458780, 13, 0, 458781, 13, 0, 589818, 13, 0, 589819, 13, 0, 589820, 13, 0, 589821, 13, 0, 589822, 13, 0, 589823, 13, 0, 524288, 13, 0, 524289, 13, 0, 524290, 13, 0, 524291, 13, 0, 524292, 13, 0, 524293, 13, 0, 524294, 13, 0, 524295, 13, 0, 524296, 13, 0, 524297, 13, 0, 524298, 13, 0, 524299, 13, 0, 524300, 13, 0, 524301, 13, 0, 524302, 13, 0, 524303, 13, 0, 524304, 13, 0, 524305, 13, 0, 524306, 13, 0, 524307, 13, 0, 524308, 13, 0, 524309, 13, 0, 524310, 13, 0, 524311, 13, 0, 524312, 13, 0, 524313, 13, 0, 524314, 13, 0, 524315, 13, 0, 524316, 13, 0, 524317, 13, 0, 655354, 13, 0, 655355, 13, 0, 655356, 13, 0, 655357, 13, 0, 655358, 13, 0, 655359, 13, 0, 589824, 13, 0, 589825, 13, 0, 589826, 13, 0, 589827, 13, 0, 589828, 13, 0, 589829, 13, 0, 589830, 13, 0, 589831, 13, 0, 589832, 13, 0, 589833, 13, 0, 589834, 13, 0, 589835, 13, 0, 589836, 13, 0, 589837, 13, 0, 589838, 13, 0, 589839, 13, 0, 589840, 13, 0, 589841, 13, 0, 589842, 13, 0, 589843, 13, 0, 589844, 13, 0, 589845, 13, 0, 589846, 13, 0, 589847, 13, 0, 589848, 13, 0, 589849, 13, 0, 589850, 13, 0, 589851, 13, 0, 589852, 13, 0, 589853, 13, 0, 720890, 13, 0, 720891, 13, 0, 720892, 13, 0, 720893, 13, 0, 720894, 13, 0, 720895, 13, 0, 655360, 13, 0, 655361, 13, 0, 655362, 13, 0, 655363, 13, 0, 655364, 13, 0, 655365, 13, 0, 655366, 13, 0, 655367, 13, 0, 655368, 13, 0, 655369, 13, 0, 655370, 13, 0, 655371, 13, 0, 655372, 13, 0, 655373, 13, 0, 655374, 13, 0, 655375, 13, 0, 655376, 13, 0, 655377, 13, 0, 655378, 13, 0, 655379, 13, 0, 655380, 13, 0, 655381, 13, 0, 655382, 13, 0, 655383, 13, 0, 655384, 13, 0, 655385, 13, 0, 655386, 13, 0, 655387, 13, 0, 655388, 13, 0, 655389, 13, 0, 786426, 13, 0, 786427, 13, 0, 786428, 13, 0, 786429, 13, 0, 786430, 13, 0, 786431, 13, 0, 720896, 13, 0, 720897, 13, 0, 720898, 13, 0, 720899, 13, 0, 720900, 13, 0, 720901, 13, 0, 720902, 13, 0, 720903, 13, 0, 720904, 13, 0, 720905, 13, 0, 720906, 13, 0, 720907, 13, 0, 720908, 13, 0, 720909, 13, 0, 720910, 13, 0, 720911, 13, 0, 720912, 13, 0, 720913, 13, 0, 720914, 13, 0, 720915, 13, 0, 720916, 13, 0, 720917, 13, 0, 720918, 13, 0, 720919, 13, 0, 720920, 13, 0, 720921, 13, 0, 720922, 13, 0, 720923, 13, 0, 720924, 13, 0, 720925, 13, 0, 851962, 13, 0, 851963, 13, 0, 851964, 13, 0, 851965, 13, 0, 851966, 13, 0, 851967, 13, 0, 786432, 13, 0, 786433, 13, 0, 786434, 13, 0, 786435, 13, 0, 786436, 13, 0, 786437, 13, 0, 786438, 13, 0, 786439, 13, 0, 786440, 13, 0, 786441, 13, 0, 786442, 13, 0, 786443, 13, 0, 786444, 13, 0, 786445, 13, 0, 786446, 13, 0, 786447, 13, 0, 786448, 13, 0, 786449, 13, 0, 786450, 13, 0, 786451, 13, 0, 786452, 13, 0, 786453, 13, 0, 786454, 13, 0, 786455, 13, 0, 786456, 13, 0, 786457, 13, 0, 786458, 13, 0, 786459, 13, 0, 786460, 13, 0, 786461, 13, 0, 917498, 13, 0, 917499, 13, 0, 917500, 13, 0, 917501, 13, 0, 917502, 13, 0, 917503, 13, 0, 851968, 13, 0, 851969, 13, 0, 851970, 13, 0, 851971, 13, 0, 851972, 13, 0, 851973, 13, 0, 851974, 13, 0, 851975, 13, 0, 851976, 13, 0, 851977, 13, 0, 851978, 13, 0, 851979, 13, 0, 851980, 13, 0, 851981, 13, 0, 851982, 13, 0, 851983, 13, 0, 851984, 13, 0, 851985, 13, 0, 851986, 13, 0, 851987, 13, 0, 851988, 13, 0, 851989, 13, 0, 851990, 13, 0, 851991, 13, 0, 851992, 13, 0, 851993, 13, 0, 851994, 13, 0, 851995, 13, 0, 851996, 13, 0, 851997, 13, 0, 983034, 13, 0, 983035, 13, 0, 983036, 13, 0, 983037, 13, 0, 983038, 13, 0, 983039, 13, 0, 917504, 13, 0, 917505, 13, 0, 917506, 13, 0, 917507, 13, 0, 917508, 13, 0, 917509, 13, 0, 917510, 13, 0, 917511, 13, 0, 917512, 13, 0, 917513, 13, 0, 917514, 13, 0, 917515, 13, 0, 917516, 13, 0, 917517, 13, 0, 917518, 13, 0, 917519, 13, 0, 917520, 13, 0, 917521, 13, 0, 917522, 13, 0, 917523, 13, 0, 917524, 13, 0, 917525, 13, 0, 917526, 13, 0, 917527, 13, 0, 917528, 13, 0, 917529, 13, 0, 917530, 13, 0, 917531, 13, 0, 917532, 13, 0, 917533, 13, 0, 1048570, 13, 0, 1048571, 13, 0, 1048572, 13, 0, 1048573, 13, 0, 1048574, 13, 0, 1048575, 13, 0, 983040, 13, 0, 983041, 13, 0, 983042, 13, 0, 983043, 13, 0, 983044, 13, 0, 983045, 13, 0, 983046, 13, 0, 983047, 13, 0, 983048, 13, 0, 983049, 13, 0, 983050, 13, 0, 983051, 13, 0, 983052, 13, 0, 983053, 13, 0, 983054, 13, 0, 983055, 13, 0, 983056, 13, 0, 983057, 13, 0, 983058, 13, 0, 983059, 13, 0, 983060, 13, 0, 983061, 13, 0, 983062, 13, 0, 983063, 13, 0, 983064, 13, 0, 983065, 13, 0, 983066, 13, 0, 983067, 13, 0, 983068, 13, 0, 983069, 13, 0, 1114106, 13, 0, 1114107, 13, 0, 1114108, 13, 0, 1114109, 13, 0, 1114110, 13, 0, 1114111, 13, 0, 1048576, 13, 0, 1048577, 13, 0, 1048578, 13, 0, 1048579, 13, 0, 1048580, 13, 0, 1048581, 13, 0, 1048582, 13, 0, 1048583, 13, 0, 1048584, 13, 0, 1048585, 13, 0, 1048586, 13, 0, 1048587, 13, 0, 1048588, 13, 0, 1048589, 13, 0, 1048590, 13, 0, 1048591, 13, 0, 1048592, 13, 0, 1048593, 13, 0, 1048594, 13, 0, 1048595, 13, 0, 1048596, 13, 0, 1048597, 13, 0, 1048598, 13, 0, 1048599, 13, 0, 1048600, 13, 0, 1048601, 13, 0, 1048602, 13, 0, 1048603, 13, 0, 1048604, 13, 0, 1048605, 13, 0, 1179642, 13, 0, 1179643, 13, 0, 1179644, 13, 0, 1179645, 13, 0, 1179646, 13, 0, 1179647, 13, 0, 1114112, 13, 0, 1114113, 13, 0, 1114114, 13, 0, 1114115, 13, 0, 1114116, 13, 0, 1114117, 13, 0, 1114118, 13, 0, 1114119, 13, 0, 1114120, 13, 0, 1114121, 13, 0, 1114122, 13, 0, 1114123, 13, 0, 1114124, 13, 0, 1114125, 13, 0, 1114126, 13, 0, 1114127, 13, 0, 1114128, 13, 0, 1114129, 13, 0, 1114130, 13, 0, 1114131, 13, 0, 1114132, 13, 0, 1114133, 13, 0, 1114134, 13, 0, 1114135, 13, 0, 1114136, 13, 0, 1114137, 13, 0, 1114138, 13, 0, 1114139, 13, 0, 1114140, 13, 0, 1114141, 13, 0, 1245178, 13, 0, 1245179, 13, 0, 1245180, 13, 0, 1245181, 13, 0, 1245182, 13, 0, 1245183, 13, 0, 1179648, 13, 0, 1179649, 13, 0, 1179650, 13, 0, 1179651, 13, 0, 1179652, 13, 0, 1179653, 13, 0, 1179654, 13, 0, 1179655, 13, 0, 1179656, 13, 0, 1179657, 13, 0, 1179658, 13, 0, 1179659, 13, 0, 1179660, 13, 0, 1179661, 13, 0, 1179662, 13, 0, 1179663, 13, 0, 1179664, 13, 0, 1179665, 13, 0, 1179666, 13, 0, 1179667, 13, 0, 1179668, 13, 0, 1179669, 13, 0, 1179670, 13, 0, 1179671, 13, 0, 1179672, 13, 0, 1179673, 13, 0, 1179674, 13, 0, 1179675, 13, 0, 1179676, 13, 0, 1179677, 13, 0 )

[node name="World" type="Node2D" parent="."]
position = Vector2( 0, 6.10352e-05 )
rotation = 3.14159
scale = Vector2( 0.221381, -38.1113 )

[node name="World2D" type="StaticBody2D" parent="World"]
position = Vector2( -27.1105, 1.57458 )
rotation = 3.14159
scale = Vector2( 4.51709, -0.0262389 )
collision_layer = 4

[node name="Light2D3" type="Light2D" parent="World/World2D"]
visible = false
position = Vector2( 692.381, 646.409 )
rotation = -0.000829847
scale = Vector2( 7.11387, 2.28854 )
texture = ExtResource( 14 )

[node name="Light2D2" type="Light2D" parent="World/World2D"]
position = Vector2( 756.183, 284.686 )
rotation = -0.000451488
scale = Vector2( 5.6271, 4.71567 )
texture = ExtResource( 14 )
energy = 0.8
mode = 3

[node name="Main" type="Node" parent="."]

[node name="Player" type="Node2D" parent="Main"]
light_mask = 0
position = Vector2( 232, -12 )

[node name="Main Character" type="KinematicBody2D" parent="Main/Player"]
position = Vector2( -23.9138, 16.3646 )
script = ExtResource( 8 )

[node name="Body" type="CollisionShape2D" parent="Main/Player/Main Character"]
position = Vector2( 244.373, 283.385 )
scale = Vector2( 0.110548, 0.0946879 )
shape = SubResource( 1 )
one_way_collision = true

[node name="MC-Sprite" type="Sprite" parent="Main/Player/Main Character"]
show_behind_parent = true
light_mask = 2
position = Vector2( 246.414, 291.885 )
scale = Vector2( 0.113553, 0.0973955 )
texture = SubResource( 2 )

[node name="CanvasModulate" type="CanvasModulate" parent="Main/Player/Main Character/MC-Sprite"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -4002.54, -3041.72 )
scale = Vector2( 8.80646, 10.2674 )
color = Color( 0, 0, 0, 1 )

[node name="Camera2D" type="Camera2D" parent="Main/Player/Main Character/MC-Sprite"]
visible = false
position = Vector2( -10.5732, 1.96484 )
scale = Vector2( 6.29228, 5.77998 )
rotating = true
zoom = Vector2( 0.7, 0.7 )

[node name="range" type="RayCast2D" parent="Main/Player/Main Character/MC-Sprite"]
position = Vector2( -21.1191, 37.123 )
rotation = -1.59349
scale = Vector2( 1000, 40 )
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 2

[node name="range2" type="RayCast2D" parent="Main/Player/Main Character/MC-Sprite"]
position = Vector2( -21.1191, 37.125 )
rotation = 1.5708
scale = Vector2( 1000, 40 )
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 2

[node name="groundray" type="RayCast2D" parent="Main/Player/Main Character/MC-Sprite"]
position = Vector2( 40, 50 )
scale = Vector2( 20, 30 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2
collide_with_areas = true

[node name="Eyes3" type="Sprite" parent="Main"]
modulate = Color( 1, 1, 1, 0.364706 )
position = Vector2( 164.999, 307.153 )
rotation = 0.000433903
scale = Vector2( 0.207504, 0.162407 )
texture = ExtResource( 13 )

[node name="Portal" type="Sprite" parent="Main/Eyes3"]
self_modulate = Color( 0.807843, 0.803922, 0.803922, 1 )
show_behind_parent = true
light_mask = 2
position = Vector2( -24.0929, -80.9755 )
rotation = -0.000554388
scale = Vector2( 1.18927, 1.65569 )
texture = ExtResource( 16 )
script = ExtResource( 10 )

[node name="Detection" type="RayCast2D" parent="Main/Eyes3/Portal"]
position = Vector2( 0, -156.193 )
scale = Vector2( 50, 7 )
enabled = true

[node name="PortalNoise" type="AudioStreamPlayer2D" parent="Main/Eyes3/Portal"]
stream = ExtResource( 6 )
max_distance = 1000.0
attenuation = 111.431
script = ExtResource( 11 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="Dialogue" type="WindowDialog" parent="Control"]
visible = true
margin_left = 1.0
margin_top = 520.0
margin_right = 1553.0
margin_bottom = 889.0

[node name="Text" type="Label" parent="Control/Dialogue"]
margin_left = 382.0
margin_top = 63.0
margin_right = 1387.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 3 )
text = ". . ."
autowrap = true

[node name="Continue" type="Label" parent="Control/Dialogue"]
margin_left = 1292.0
margin_top = 306.0
margin_right = 1635.0
margin_bottom = 335.0
custom_fonts/font = SubResource( 4 )
text = "Click anywhere to continue V"

[node name="Icon" type="Sprite" parent="Control/Dialogue"]
self_modulate = Color( 0, 0, 0, 0.376471 )
position = Vector2( 182.313, 145.594 )
scale = Vector2( 0.593436, 0.56703 )
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 1000, 1000 )

[node name="Button" type="Button" parent="Control/Dialogue"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -679.0
margin_right = 112.0
margin_bottom = 147.0
button_mask = 7
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
light_mask = 0
position = Vector2( 1282, 272 )
scale = Vector2( 0.54329, 0.464747 )
texture = ExtResource( 15 )

[node name="Eyes" type="Sprite" parent="Sprite"]
position = Vector2( -18.9004, -168.655 )
rotation = -3.14109
scale = Vector2( 0.274767, 0.188494 )
texture = ExtResource( 18 )

[node name="MainTheme" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 935.917, 291.5 )
stream = ExtResource( 5 )
attenuation = 7.72748
script = ExtResource( 3 )

[node name="GlitchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -14.0

[node name="Shader" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( 781, 367 )
scale = Vector2( 3.37875, 3.07333 )
texture = ExtResource( 17 )
